feat(server): update recipes
