# server/pb/service_home_life_grpc.pb.go
@@ -30,6 +30,7 @@ const (
 	HomeLife_AssignTask_FullMethodName      = "/pb.HomeLife/AssignTask"
 	HomeLife_GetTasks_FullMethodName        = "/pb.HomeLife/GetTasks"
 	HomeLife_CreateRecipe_FullMethodName    = "/pb.HomeLife/CreateRecipe"
+	HomeLife_UpdateRecipe_FullMethodName    = "/pb.HomeLife/UpdateRecipe"
 )
 
 // HomeLifeClient is the client API for HomeLife service.
@@ -47,6 +48,7 @@ type HomeLifeClient interface {
 	AssignTask(ctx context.Context, in *AssignTaskRequest, opts ...grpc.CallOption) (*AssignTaskResponse, error)
 	GetTasks(ctx context.Context, in *GetTasksRequest, opts ...grpc.CallOption) (*GetTasksResponse, error)
 	CreateRecipe(ctx context.Context, in *CreateRecipeRequest, opts ...grpc.CallOption) (*CreateRecipeResponse, error)
+	UpdateRecipe(ctx context.Context, in *UpdateRecipeRequest, opts ...grpc.CallOption) (*UpdateRecipeResponse, error)
 }
 
 type homeLifeClient struct {
@@ -167,6 +169,16 @@ func (c *homeLifeClient) CreateRecipe(ctx context.Context, in *CreateRecipeReque
 	return out, nil
 }
 
+func (c *homeLifeClient) UpdateRecipe(ctx context.Context, in *UpdateRecipeRequest, opts ...grpc.CallOption) (*UpdateRecipeResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateRecipeResponse)
+	err := c.cc.Invoke(ctx, HomeLife_UpdateRecipe_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // HomeLifeServer is the server API for HomeLife service.
 // All implementations must embed UnimplementedHomeLifeServer
 // for forward compatibility
@@ -182,6 +194,7 @@ type HomeLifeServer interface {
 	AssignTask(context.Context, *AssignTaskRequest) (*AssignTaskResponse, error)
 	GetTasks(context.Context, *GetTasksRequest) (*GetTasksResponse, error)
 	CreateRecipe(context.Context, *CreateRecipeRequest) (*CreateRecipeResponse, error)
+	UpdateRecipe(context.Context, *UpdateRecipeRequest) (*UpdateRecipeResponse, error)
 	mustEmbedUnimplementedHomeLifeServer()
 }
 
@@ -221,6 +234,9 @@ func (UnimplementedHomeLifeServer) GetTasks(context.Context, *GetTasksRequest) (
 }
 func (UnimplementedHomeLifeServer) CreateRecipe(context.Context, *CreateRecipeRequest) (*CreateRecipeResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateRecipe not implemented")
+}
+func (UnimplementedHomeLifeServer) UpdateRecipe(context.Context, *UpdateRecipeRequest) (*UpdateRecipeResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateRecipe not implemented")
 }
 func (UnimplementedHomeLifeServer) mustEmbedUnimplementedHomeLifeServer() {}
 
@@ -433,6 +449,24 @@ func _HomeLife_CreateRecipe_Handler(srv interface{}, ctx context.Context, dec fu
 	return interceptor(ctx, in, info, handler)
 }
 
+func _HomeLife_UpdateRecipe_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateRecipeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HomeLifeServer).UpdateRecipe(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: HomeLife_UpdateRecipe_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HomeLifeServer).UpdateRecipe(ctx, req.(*UpdateRecipeRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // HomeLife_ServiceDesc is the grpc.ServiceDesc for HomeLife service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -483,6 +517,10 @@ var HomeLife_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateRecipe",
 			Handler:    _HomeLife_CreateRecipe_Handler,
+		},
+		{
+			MethodName: "UpdateRecipe",
+			Handler:    _HomeLife_UpdateRecipe_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
